# MCP-1

./: api.py  main.py  pyproject.toml  requirements.txt
.github/workflows/: main_expense.yml
